--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -12,7 +12,7 @@ node {
      }
    }
    stage('docker build/push') {
-     docker.withRegistry('https://index.docker.io/v2/', 'dockerhub') {
+     docker.withRegistry('https://index.docker.io/v2/', 'admin') {
        def app = docker.build("yugant1/docker-nodejs-demo:${commit_id}", '.').push()
      }
    }
